clusters/cl01tl/manifests/plex/Deployment-plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: plex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: plex
    helm.sh/chart: plex-5.2.1
  annotations:
    prometheus.io/probe-module: http_401
  namespace: plex
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: plex
      app.kubernetes.io/instance: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: plex
        app.kubernetes.io/name: plex
    spec:
      enableServiceLinks: false
      serviceAccountName: plex
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - jellyfin
              namespaces:
                - jellyfin
              topologyKey: kubernetes.io/hostname
      containers:
        - env:
            - name: TZ
              value: America/Chicago
            - name: VERSION
              value: docker
          image: ghcr.io/linuxserver/plex:1.43.4.10903-e5521bd8c-ls327@sha256:06e07af2851e6a822e89062b148435495dd794d6d5aaf36247dee05fb3dcc4b8
          livenessProbe:
            httpGet:
              path: /identity
              port: 32400
          name: main
          readinessProbe:
            httpGet:
              path: /identity
              port: 32400
          resources:
            limits:
              gpu.intel.com/i915: 1
            requests:
              cpu: 10m
              gpu.intel.com/i915: 1
              memory: 100Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /identity
              port: 32400
            periodSeconds: 10
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/store
              name: media
              readOnly: true
            - mountPath: /transcode
              name: transcode
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: media
          persistentVolumeClaim:
            claimName: plex-nfs-storage
        - emptyDir: {}
          name: transcode
