clusters/cl01tl/manifests/plex/Service-plex.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: plex
    app.kubernetes.io/service: plex
    helm.sh/chart: plex-5.2.1
  annotations:
    external-dns.kubernetes.io/hostname: plex-lb.alexlebens.dev
    lbipam.cilium.io/ips: 10.234.0.33
  namespace: plex
spec:
  type: LoadBalancer
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
