clusters/cl01tl/manifests/plex/HTTPRoute-http-route-plex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-plex
  namespace: plex
  labels:
    app.kubernetes.io/name: http-route-plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/part-of: plex
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - plex.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: plex
          port: 32400
          weight: 100
