clusters/cl01tl/manifests/plex/HTTPRoute-plex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  labels:
    app.kubernetes.io/instance: plex
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: plex
    helm.sh/chart: plex-5.1.0
  namespace: plex
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "plex.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: plex
          namespace: plex
          port: 32400
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
